force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Registration_Compact_Layout</compactLayoutAssignment>
    <description
  >This is a registration for any event, conference, forum, webinar, etc. across all e.Republic business units.</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>