force-app/main/default/objects/Registration__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula
  >Registrant_Name__r.Account.Owner.FirstName &amp;&quot; &quot;&amp; Registrant_Name__r.Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>