force-app/main/default/objects/Registration__c/fields/Account_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Team__c</fullName>
    <formula>Registrant_Name__r.Account.Sales_Team_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Team</label>
    <type>Text</type>
</CustomField>