force-app/main/default/objects/Registration__c/fields/Account_TW_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_TW_Status__c</fullName>
    <formula
  >TEXT(  Registrant_Name__r.Account.TW_Most_Recent_Membership__r.Stage__c  )  &amp;&quot; &quot;&amp;
TEXT(  Registrant_Name__r.Account.TW_Most_Recent_Membership__r.Level__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TW Status</label>
    <type>Text</type>
</CustomField>