force-app/main/default/objects/Registration__c/fields/answeredallpolls__c.field-meta.xml
<CustomField>
    <fullName>answeredallpolls__c</fullName>
    <description
  >Whether a user answered all polls or not. Typically, limited to Y or N, but may extend in the future.</description>
    <inlineHelpText
  >Whether a user answered all polls or not. Typically, limited to Y or N, but may extend in the future.</inlineHelpText>
    <label>On24 answeredallpolls</label>
    <length>1</length>
    <type>Text</type>
</CustomField>