force-app/main/default/objects/Registration__c/fields/answeredallsurveys__c.field-meta.xml
<CustomField>
    <fullName>answeredallsurveys__c</fullName>
    <description
  >Whether a user answered all surveys or not. Typically, limited to Y or N, but may extend in the future.</description>
    <inlineHelpText
  >Whether a user answered all surveys or not. Typically, limited to Y or N, but may extend in the future.</inlineHelpText>
    <label>On24 answeredallsurveys</label>
    <length>1</length>
    <type>Text</type>
</CustomField>