force-app/main/default/objects/Registration__c/fields/answeredanypoll__c.field-meta.xml
<CustomField>
    <fullName>answeredanypoll__c</fullName>
    <description
  >Whether a user answered any poll or not. Typically, limited to Y or N, but may extend in the future.</description>
    <inlineHelpText
  >Whether a user answered any poll or not. Typically, limited to Y or N, but may extend in the future.</inlineHelpText>
    <label>On24 answeredanypoll</label>
    <length>1</length>
    <type>Text</type>
</CustomField>