force-app/main/default/objects/Registration__c/fields/answeredanysurvey__c.field-meta.xml
<CustomField>
    <fullName>answeredanysurvey__c</fullName>
    <description
  >Whether a user answered any survey or not. Typically, limited to Y or N, but may extend in the future.</description>
    <inlineHelpText
  >Whether a user answered any survey or not. Typically, limited to Y or N, but may extend in the future.</inlineHelpText>
    <label>On24 answeredanysurvey</label>
    <length>1</length>
    <type>Text</type>
</CustomField>