force-app/main/default/objects/Registration__c/fields/answeredpolls__c.field-meta.xml
<CustomField>
    <fullName>answeredpolls__c</fullName>
    <description>The number of polls the user responded to</description>
    <inlineHelpText>The number of polls the user responded to</inlineHelpText>
    <label>On24 answeredpolls</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>