force-app/main/default/objects/Registration__c/fields/answeredsurveys__c.field-meta.xml
<CustomField>
    <fullName>answeredsurveys__c</fullName>
    <description>The number of surveys the user responded to</description>
    <inlineHelpText>The number of surveys the user responded to</inlineHelpText>
    <label>On24 answeredsurveys</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>