force-app/main/default/objects/Registration__c/fields/archiveviewed__c.field-meta.xml
<CustomField>
    <fullName>archiveviewed__c</fullName>
    <description
  >The number of times the attendee launched the event console during the archive period of the event.</description>
    <inlineHelpText
  >The number of times the attendee launched the event console during the archive period of the event.</inlineHelpText>
    <label>On24 archiveviewed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>