force-app/main/default/objects/Registration__c/fields/askedanyquestion__c.field-meta.xml
<CustomField>
    <fullName>askedanyquestion__c</fullName>
    <description
  >Whether a user asked any question or not. Typically, limited to Y or N, but may extend in the future.</description>
    <inlineHelpText
  >Whether a user asked any question or not. Typically, limited to Y or N, but may extend in the future.</inlineHelpText>
    <label>On24 askedanyquestion</label>
    <length>1</length>
    <type>Text</type>
</CustomField>