force-app/main/default/objects/Registration__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description
  >For reporting only. Pulls the opposite value of the &quot;No Show / Cancellation&quot; field.</description>
    <formula>IF(
  OR(
    Event__r.Event_Start_Date__c&gt;TODAY(),
    ISBLANK(Event__r.Event_Start_Date__c),
    ISPICKVAL(Event__r.Status__c, &quot;Cancelled&quot;)
  ),
  FALSE,
  NOT(Event_No_Show__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>