force-app/main/default/objects/Registration__c/fields/attendedarchive__c.field-meta.xml
<CustomField>
    <fullName>attendedarchive__c</fullName>
    <description
  >Y or N, whether this attendee viewed the archived portion of this event.</description>
    <inlineHelpText
  >Y or N, whether this attendee viewed the archived portion of this event.</inlineHelpText>
    <label>On24 attendedarchive</label>
    <length>1</length>
    <type>Text</type>
</CustomField>