force-app/main/default/objects/Registration__c/fields/attendedlive__c.field-meta.xml
<CustomField>
    <fullName>attendedlive__c</fullName>
    <description
  >Y or N, whether this attendee viewed the live event.</description>
    <inlineHelpText
  >Y or N, whether this attendee viewed the live event.</inlineHelpText>
    <label>On24 attendedlive</label>
    <length>1</length>
    <type>Text</type>
</CustomField>