force-app/main/default/objects/Registration__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <formula
  >Registrant_Name__r.LastName &amp;&quot;, &quot;&amp; Registrant_Name__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>