force-app/main/default/objects/Registration__c/fields/attesteremail__c.field-meta.xml
<CustomField>
    <fullName>attesteremail__c</fullName>
    <description
  >Email address of the user who attests for another and generates a certificate in their name.</description>
    <inlineHelpText
  >Email address of the user who attests for another and generates a certificate in their name.</inlineHelpText>
    <label>On24 attesteremail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>