force-app/main/default/objects/Registration__c/fields/Authorize_Net_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Net_ID__c</fullName>
    <formula>TEXT(Transaction_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize.Net ID</label>
    <type>Text</type>
</CustomField>