force-app/main/default/objects/Registration__c/fields/Badge_Dept__c.field-meta.xml
<CustomField>
    <fullName>Badge_Dept__c</fullName>
    <formula>IF( Reg_Advisory_Board__c = True,

Registrant_Name__r.AB_Department__c,
Registrant_Name__r.Department)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Dept</label>
    <type>Text</type>
</CustomField>