force-app/main/default/objects/Registration__c/fields/Badge_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_First_Name__c</fullName>
    <formula>IF( Reg_Advisory_Board__c = True,

IF( 
ISPICKVAL(Registrant_Name__r.AB_Salutation__c , &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Registrant_Name__r.AB_Middle_Name__c )=False 
,TEXT(Registrant_Name__r.AB_Salutation__c)&amp;&quot; &quot;&amp; Registrant_Name__r.AB_First_Name__c &amp;&quot; &quot;&amp;Registrant_Name__r.AB_Middle_Name__c, 

IF( 
ISPICKVAL(Registrant_Name__r.AB_Salutation__c, &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Registrant_Name__r.AB_Middle_Name__c)=True 
,TEXT(Registrant_Name__r.AB_Salutation__c)&amp;&quot; &quot;&amp;Registrant_Name__r.AB_First_Name__c, 

IF( 
ISPICKVAL(Registrant_Name__r.AB_Salutation__c, &quot;&quot;)=True 
&amp;&amp; 
ISBLANK(Registrant_Name__r.AB_Middle_Name__c)=False 
,Registrant_Name__r.AB_First_Name__c&amp;&quot; &quot;&amp;Registrant_Name__r.AB_Middle_Name__c 

,Registrant_Name__r.AB_First_Name__c)))

,

IF( 
ISPICKVAL(Registrant_Name__r.Salutation, &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Registrant_Name__r.MiddleName)=False 
,TEXT(Registrant_Name__r.Salutation)&amp;&quot; &quot;&amp;Registrant_Name__r.FirstName&amp;&quot; &quot;&amp;Registrant_Name__r.MiddleName, 

IF( 
ISPICKVAL(Registrant_Name__r.Salutation, &quot;&quot;)=False 
&amp;&amp; 
ISBLANK(Registrant_Name__r.MiddleName)=True 
,TEXT(Registrant_Name__r.Salutation)&amp;&quot; &quot;&amp;Registrant_Name__r.FirstName, 

IF( 
ISPICKVAL(Registrant_Name__r.Salutation, &quot;&quot;)=True 
&amp;&amp; 
ISBLANK(Registrant_Name__r.MiddleName)=False 
,Registrant_Name__r.FirstName&amp;&quot; &quot;&amp;Registrant_Name__r.MiddleName 

,Registrant_Name__r.FirstName))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge First Name</label>
    <type>Text</type>
</CustomField>