force-app/main/default/objects/Registration__c/fields/Badge_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Last_Name__c</fullName>
    <formula>IF( Reg_Advisory_Board__c = True, 

IF( 
ISBLANK( Registrant_Name__r.AB_Suffix__c )=False 
,Registrant_Name__r.AB_Last_Name__c &amp;&quot;, &quot;&amp;Registrant_Name__r.AB_Suffix__c

,Registrant_Name__r.AB_Last_Name__c)

,

IF( 
ISBLANK(Registrant_Name__r.Suffix)=False 
,Registrant_Name__r.LastName&amp;&quot;, &quot;&amp;Registrant_Name__r.Suffix 

,Registrant_Name__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Last Name</label>
    <type>Text</type>
</CustomField>