force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Dept__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Dept__c</fullName>
    <label>Badge Mgr Dept</label>
    <type>TextArea</type>
</CustomField>