force-app/main/default/objects/Registration__c/fields/Badge_Mgr_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_First_Name__c</fullName>
    <description
  >Contains the first name of the person as it will show on their name badge.</description>
    <inlineHelpText
  >Contains the first name of the person as it will show on their name badge.</inlineHelpText>
    <label>Badge Mgr First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>