force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Last_Name__c</fullName>
    <label>Badge Mgr Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>