force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Org__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Org__c</fullName>
    <label>Badge Mgr Org</label>
    <type>TextArea</type>
</CustomField>