force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Settings__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Settings__c</fullName>
    <description
  >contains the font size for the 6 lines, comma separated</description>
    <label>Badge Mgr Settings</label>
    <length>200</length>
    <type>Text</type>
</CustomField>