force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Symbols__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Symbols__c</fullName>
    <label>Badge Mgr Symbols</label>
    <length>30</length>
    <type>Text</type>
</CustomField>