force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Title__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Title__c</fullName>
    <label>Badge Mgr Title</label>
    <type>TextArea</type>
</CustomField>