force-app/main/default/objects/Registration__c/fields/Badge_Mgr_Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Badge_Mgr_Twitter_Handle__c</fullName>
    <label>Badge Mgr Twitter Handle</label>
    <length>50</length>
    <type>Text</type>
</CustomField>