force-app/main/default/objects/Registration__c/fields/Badge_Org__c.field-meta.xml
<CustomField>
    <fullName>Badge_Org__c</fullName>
    <formula>IF( Reg_Advisory_Board__c = True, 
Registrant_Name__r.AB_Organization__c,
Registrant_Name__r.Company_Name_Holder__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Org</label>
    <type>Text</type>
</CustomField>