force-app/main/default/objects/Registration__c/fields/Badge_Org_Dept__c.field-meta.xml
<CustomField>
    <fullName>Badge_Org_Dept__c</fullName>
    <formula>Badge_Org__c &amp; &quot; &quot; &amp; Badge_Dept__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Org / Dept</label>
    <type>Text</type>
</CustomField>