force-app/main/default/objects/Registration__c/fields/Badge_Printed__c.field-meta.xml
<CustomField>
    <fullName>Badge_Printed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Printed</label>
    <type>Checkbox</type>
</CustomField>