force-app/main/default/objects/Registration__c/fields/Badge_Title__c.field-meta.xml
<CustomField>
    <fullName>Badge_Title__c</fullName>
    <formula>IF( Reg_Advisory_Board__c = True, 
Registrant_Name__r.AB_Title__c,
Registrant_Name__r.Title)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Title</label>
    <type>Text</type>
</CustomField>