force-app/main/default/objects/Registration__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description
  >Batch ID,   used to create Sales Invoices with Registations as line items</description>
    <label>Batch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>