force-app/main/default/objects/Registration__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Specify the account that we will be billing for this registration.</description>
    <inlineHelpText
  >Specify the account that we will be billing for this registration.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>