force-app/main/default/objects/Registration__c/fields/Billing_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact2__c</fullName>
    <description
  >Shows the Billing Contact from the Reg Billing Contract related to this registration.</description>
    <formula>Contract__r.Billing_Contact_Lookup__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the Billing Contact from the Reg Billing Contract related to this registration.</inlineHelpText>
    <label>Billing Contact</label>
    <type>Text</type>
</CustomField>