force-app/main/default/objects/Registration__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Specify the contact that will be billed for this registration. Contact does not need to be in the same account as the Billing Account.</description>
    <inlineHelpText
  >Specify the contact that will be billed for this registration. Contact does not need to be in the same account as the Billing Account.</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations (Billing Contact)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>