force-app/main/default/objects/Registration__c/fields/Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Email__c</fullName>
    <description
  >Displays the email address of the contact linked to in the Billing Contact field.</description>
    <formula>Contract__r.Billing_Contact_Lookup__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Email</label>
    <type>Text</type>
</CustomField>