force-app/main/default/objects/Registration__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <description
  >Shows the billing status of this registration based on the reg fee, contract, and web transaction id.</description>
    <formula>IF(ISBLANK(Contract__c)=FALSE,Contract_Status__c,
IF(ISBLANK( Transaction_ID__c )=FALSE, &quot;Web Payment&quot;,
IF(Reg_Fee__c&gt;0,&quot;Contract Needed&quot;,
&quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the billing status of this registration based on the reg fee, contract, and web transaction id.</inlineHelpText>
    <label>Billing Status</label>
    <type>Text</type>
</CustomField>