force-app/main/default/objects/Registration__c/fields/Bookmarked__c.field-meta.xml
<CustomField>
    <fullName>Bookmarked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bookmarked</label>
    <type>Checkbox</type>
</CustomField>