force-app/main/default/objects/Registration__c/fields/browser__c.field-meta.xml
<CustomField>
    <fullName>browser__c</fullName>
    <label>On24 browser</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>