force-app/main/default/objects/Registration__c/fields/Case_Insensitive_Reg_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Insensitive_Reg_Account_ID__c</fullName>
    <formula>CASESAFEID( Registrant_Account_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case-Insensitive Reg Account ID</label>
    <type>Text</type>
</CustomField>