force-app/main/default/objects/Registration__c/fields/CC_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Recipient__c</fullName>
    <label>CC Email Recipient</label>
    <length>100</length>
    <type>Text</type>
</CustomField>