force-app/main/default/objects/Registration__c/fields/CC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Date__c</fullName>
    <label>CC Expiration Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>