force-app/main/default/objects/Registration__c/fields/CC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Name__c</fullName>
    <label>CC First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>