force-app/main/default/objects/Registration__c/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <label>CC Number</label>
    <length>19</length>
    <type>Text</type>
</CustomField>