force-app/main/default/objects/Registration__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Contract record for this registration, used to send registration billings down to finance.</description>
    <inlineHelpText
  >Contract record for this registration, used to send registration billings down to finance.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>