force-app/main/default/objects/Registration__c/fields/Contract_Account__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account__c</fullName>
    <description>Shows the account name for the event contract.</description>
    <formula>Event_Contract__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the account name for the event contract.</inlineHelpText>
    <label>Contract Account</label>
    <type>Text</type>
</CustomField>