force-app/main/default/objects/Registration__c/fields/Contract_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account_ID__c</fullName>
    <formula>Contract__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Account ID</label>
    <type>Text</type>
</CustomField>