force-app/main/default/objects/Registration__c/fields/Contract_Additional_Pass_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Additional_Pass_Limit__c</fullName>
    <formula>Contract__r.Additional_Pass_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Additional Pass Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>