force-app/main/default/objects/Registration__c/fields/Contract_Event_Passes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Event_Passes__c</fullName>
    <formula>Contract__r.Event_Passes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Event Passes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>