force-app/main/default/objects/Registration__c/fields/Contract_Sponsorship_Level__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sponsorship_Level__c</fullName>
    <formula>TEXT(Contract__r.Sponsorship_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Sponsorship Level</label>
    <type>Text</type>
</CustomField>