force-app/main/default/objects/Registration__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description
  >Shows Status from the Reg Billing Contract related to this registration.</description>
    <formula>TEXT(Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows Status from the Reg Billing Contract related to this registration.</inlineHelpText>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>