force-app/main/default/objects/Registration__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description
  >Shows the Payment Type from the Reg Billing Contract related to this registration.</description>
    <formula>TEXT(Contract__r.Payment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the Payment Type from the Reg Billing Contract related to this registration.</inlineHelpText>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>