force-app/main/default/objects/Registration__c/fields/Created_by__c.field-meta.xml
<CustomField>
    <fullName>Created_by__c</fullName>
    <description
  >Copy of Created By used for Related Lists and Reports</description>
    <formula
  >CreatedBy.FirstName&amp;&quot; &quot;&amp;CreatedBy.LastName&amp;&quot;, &quot;&amp;

TEXT( MONTH( DATEVALUE( CreatedDate)) ) &amp; &quot;/&quot; &amp; TEXT( DAY(DATEVALUE( CreatedDate) ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( DATEVALUE(CreatedDate) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Copy of Created By used for Related Lists and Reports</inlineHelpText>
    <label>Created by</label>
    <type>Text</type>
</CustomField>