force-app/main/default/objects/Registration__c/fields/createtimestamp__c.field-meta.xml
<CustomField>
    <fullName>createtimestamp__c</fullName>
    <description>Date and Time registration took place</description>
    <inlineHelpText>Date and Time registration took place</inlineHelpText>
    <label>On24 createtimestamp</label>
    <type>DateTime</type>
</CustomField>