force-app/main/default/objects/Registration__c/fields/Custom_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question_1__c</fullName>
    <label>Custom Question 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>