force-app/main/default/objects/Registration__c/fields/Custom_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question_2__c</fullName>
    <label>Custom Question 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>