force-app/main/default/objects/Registration__c/fields/Cvtr_Non_Qual__c.field-meta.xml
<CustomField>
    <fullName>Cvtr_Non_Qual__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Convertr Non Qual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Non-Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>