force-app/main/default/objects/Registration__c/fields/Days_Before_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Event__c</fullName>
    <description
  >Shows the number of days before the event that the registration came in for use of Y/Y reporting.</description>
    <formula>Event__r.Event_Start_Date__c - Reg_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Before Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>