force-app/main/default/objects/Registration__c/fields/Days_to_Activate__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Activate__c</fullName>
    <description
  >The number of days between when a registration is entered and when a contract for that registration was activated.</description>
    <formula>DATEVALUE( Contract__r.ActivatedDate) - Reg_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Activate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>