force-app/main/default/objects/Registration__c/fields/Deferred_Payment_Acknowledgement__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Payment_Acknowledgement__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >The user was presented with a &quot;I acknowledge that a payment is required and I will be billed later&quot; and checked it.</description>
    <label>Deferred Payment Acknowledgement</label>
    <type>Checkbox</type>
</CustomField>