force-app/main/default/objects/Registration__c/fields/Demo_Agency_Function__c.field-meta.xml
<CustomField>
    <fullName>Demo_Agency_Function__c</fullName>
    <description>The registrant&apos;s Agency Function.</description>
    <formula>TEXT(Registrant_Name__r.Demo_Agency_Function__c)</formula>
    <label>Demo Agency Function</label>
    <type>Text</type>
</CustomField>