force-app/main/default/objects/Registration__c/fields/Demo_Branch_of_Govt__c.field-meta.xml
<CustomField>
    <fullName>Demo_Branch_of_Govt__c</fullName>
    <description>The registrant&apos;s Demo Branch of Govt.</description>
    <formula>TEXT(Registrant_Name__r.Demo_Branch_of_Govt__c)</formula>
    <label>Demo Branch of Govt</label>
    <type>Text</type>
</CustomField>