force-app/main/default/objects/Registration__c/fields/Demo_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Demo_Job_Function__c</fullName>
    <formula>TEXT(Registrant_Name__r.Demo_Job_Function__c)</formula>
    <label>Demo Job Function</label>
    <type>Text</type>
</CustomField>