force-app/main/default/objects/Registration__c/fields/Demo_Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Demo_Job_Role__c</fullName>
    <description>The registrant&apos;s Job Role.</description>
    <formula>TEXT(Registrant_Name__r.Demo_Job_Role__c)</formula>
    <label>Demo Job Role</label>
    <type>Text</type>
</CustomField>