force-app/main/default/objects/Registration__c/fields/Dietary_Needs__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Needs__c</fullName>
    <label>Dietary Needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Other Food Allergy - See Reg Notes</fullName>
            </value>
            <value>
                <fullName>Peanut Allergy</fullName>
            </value>
            <value>
                <fullName>Seafood/Shellfish Allergy</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>