force-app/main/default/objects/Registration__c/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <label>Emergency Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>