force-app/main/default/objects/Registration__c/fields/Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone__c</fullName>
    <label>Emergency Contact Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>