force-app/main/default/objects/Registration__c/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <label>Emergency Contact Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>