force-app/main/default/objects/Registration__c/fields/engagementscore__c.field-meta.xml
<CustomField>
    <fullName>engagementscore__c</fullName>
    <description
  >This is a number between 0 and 10.0 measuring how engaged a user was based on activity during the webcast.
// 01/22/2018 Edited Length from 1 to 10 in order to accommodate data from On24 that was outside of the numeric range.</description>
    <inlineHelpText
  >This is a number between 0 and 10.0 measuring how engaged a user was based on activity during the webcast.</inlineHelpText>
    <label>On24 engagementscore</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>